--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bluebird": "^3.7.2",
     "chai": "^4.3.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -15,6 +16,7 @@
     "joi": "^17.4.0",
     "mocha": "^8.3.2",
     "morgan": "~1.9.1",
+    "nconf": "^0.11.2",
     "request": "^2.88.2"
   }
 }
